--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <!-- <meta charset="UTF-8"> -->
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
@@ -9,6 +9,6 @@
 </head>
 <body>
   <h1>М©ПoВµ</h1>
-  <p>В†ВҐВ§В¶В®В®В®В®В®В®В®В®В®В®В®Вс</p>
+  <p>В†ВҐВ§В¶В®В®В®В®В®В®В®В®В®В®В®ВсХ„Л≠ТЖ</p>
 </body>
 </html>
