--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>ŽR“c‘¾˜Y‚Ìƒ|[ƒgƒtƒHƒŠƒIƒTƒCƒg</title>
+  <title>å±±ç”°å¤ªéƒŽã®ãƒãƒ¼ãƒˆãƒ•ã‚©ãƒªã‚ªã‚µã‚¤ãƒˆ</title>
 </head>
 <body>
-  <h1>Œ©o‚µ</h1>
-  <p>‚ ‚¢‚¤‚¦‚¨‚¨‚¨‚¨‚¨‚¨‚¨‚¨‚¨‚¨‚¨‚ñ•×‹­’†</p>
+  <h1>è¦‹å‡ºã—</h1>
+  <p>è‰²ã€…å‹‰å¼·ä¸­</p>
 </body>
 </html>
